# mcp-remote-py

./: .gitignore  README.md  install-global-uv.cmd  install-global-uv.sh  pyproject.toml  uninstall-global-uv.cmd  uninstall-global-uv.sh
mcp_remote_py/: __main__.py  http_transport.py  logging_utils.py  proxy.py  remote_transport.py  sse_transport.py  stdio_jsonl.py
tests/: test_sse_parsing.py
