[project]
name = "mcp-remote-py"
version = "0.0.1"
description = "Minimal MCP stdio <-> remote SSE proxy (no auth)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
mcp-remote-py = "mcp_remote_py.__main__:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_remote_py"]
